--- a/cjl-win.ini
+++ b/cjl-win.ini
@@ -62,20 +62,20 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组定义
 
 
-custom_proxy_group=🚀 节点选择`select`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🌐 台湾节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 VSOL`select`[]⭐ 故转`[]🇺🇲 美国节点`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 SkypeTeams`select`[]DIRECT`[]⭐ 故转`[]🇺🇲 美国节点`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🐸 手动切换
-custom_proxy_group=🌍 远程软件`select`[]🌐 印度节点`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇺🇲 美国节点`[]🌐 其他地区`[]🌐 台湾节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🐸 手动切换
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🚀 CloudFlare`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
+custom_proxy_group=🚀 节点选择`select`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 台湾节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 VSOL`select`[]⭐ 故转`[]🇺🇲 北美节点`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 SkypeTeams`select`[]DIRECT`[]⭐ 故转`[]🇺🇲 北美节点`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🐸 手动切换
+custom_proxy_group=🌍 远程软件`select`[]🌐 印度节点`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 南美节点`[]🌐 欧洲节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 北美节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🐸 手动切换
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇺🇲 北美节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🐸 手动切换
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 CloudFlare`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]🚀 节点选择
+custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]🚀 节点选择
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🎥 奈飞节点`[]🐸 手动切换
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
@@ -93,19 +93,21 @@ custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Me
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
 custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇸🇬 加坡节点`select`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=🇸🇬 东南亚节点`select`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
+custom_proxy_group=🇺🇲 北美节点`select`(加拿大|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 custom_proxy_group=🌐 印度节点`url-test`.(?=.*(印度))`http://www.gstatic.com/generate_204`320,,50
 custom_proxy_group=🌐 台湾节点`select`(?=.*(台湾|Taiwan))
+custom_proxy_group=🌐 南美节点`select`(?=.*(阿根廷|澳大利亚))
+custom_proxy_group=🌐 欧洲节点`select`(?=.*(法国|德国|英国|意大利|土耳其|俄罗斯|Russia|爱尔兰))
 custom_proxy_group=🌐 其他地区`select`(^(?!.*(美国|台湾|Taiwan|香港|HK|Hong Kong|🇭🇰|HongKong|印度|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|新加坡|坡|狮城|SG|Singapore)).*)
 custom_proxy_group=⭐ 故转`fallback`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 台湾故转`*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 香港故转`fallback`[]♻️ 香港数字系列`[]♻️ 香港油尖系列`[]♻️ 香港其他`*$`http://www.gstatic.com/generate_204`400,,50
-custom_proxy_group=♻️ 香港其他`url-test`(?=.*(^中国-香港$|HK|Hong Kong|🇭🇰|HongKong))^((?!(香港 油尖|香港 (0[1-9]|1[0-6])|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`306,,50
+custom_proxy_group=♻️ 香港其他`url-test`(?=.*(^中国-香港$|HK|Hong Kong|🇭🇰|HongKong))^((?!(香港 油尖|香港 (0[1-9]|1[0-6])|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`560,,50
 custom_proxy_group=♻️ 香港油尖系列`url-test`(?=.*(香港 油尖))`http://www.gstatic.com/generate_204`430,,50
 custom_proxy_group=♻️ 香港数字系列`url-test`(?=.*(香港 (0[1-9]|1[0-6])))`http://www.gstatic.com/generate_204`370,,50
-custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`310,,50
-custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`303,,50
-custom_proxy_group=🔯 台湾故转`fallback`(?=.*(台湾|Taiwan))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`350,,50
+custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`520,,50
+custom_proxy_group=🔯 加坡故转`fallback`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`560,,50
+custom_proxy_group=🔯 台湾故转`fallback`(?=.*(台湾|Taiwan))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`580,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`500,,50
 
 
