--- a/cjl.ini
+++ b/cjl.ini
@@ -58,49 +58,49 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ;策略组定义
-custom_proxy_group=🚀 节点选择`select`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 台湾节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 VSOL`select`[]⭐ 故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 台湾节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 SkypeTeams`select`[]DIRECT`[]⭐ 故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 台湾节点`[]🐸 手动切换
-custom_proxy_group=🌍 远程软件`select`[]🌐 印度节点`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 南美节点`[]🌐 欧洲节点`[]🇸🇬 东南亚节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 台湾节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 北美节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇭🇰 香港节点`[]🐸 手动切换
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇺🇲 北美节点`[]🇭🇰 香港节点`[]🇸🇬 东南亚节点`[]🐸 手动切换
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🚀 CloudFlare`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 台湾节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🎥 奈飞节点`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🐸 手动切换
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🐸 手动切换
-custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🐸 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 台湾节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]⭐ 故转`[]🔯 香港自动`[]🔯 日本自动`[]🔯 东南亚自动`[]🔯 台湾自动`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 VSOL`select`[]⭐ 故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 SkypeTeams`select`[]DIRECT`[]⭐ 故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🌍 远程软件`select`[]DIRECT`[]⭐ 故转`[]🌐 印度节点`[]🔯 香港自动`[]🔯 日本自动`[]🔯 东南亚自动`[]🔯 台湾自动`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`[]🌐 欧洲节点`[]🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 CloudFlare`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`selec`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`🌐 欧洲节点`🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换
+custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`🌐 欧洲节点`🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换
+custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`🌐 欧洲节点`🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🎥 奈飞节点`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`🌐 欧洲节点`🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`🌐 欧洲节点`🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 ;custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 ;custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🌐 印度节点`[]⭐ 故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇺🇲 北美节点`[]🌐 其他地区`[]🌐 南美节点`[]🌐 欧洲节点`[]🇸🇬 东南亚节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🌐 印度节点`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 东南亚节点`[]🇺🇲 北美节点`🌐 欧洲节点`🌐 南美节点`[]🌐 台湾节点`[]🌐 其他地区`[]🐸 手动切换
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
 custom_proxy_group=🇯🇵 日本节点`select`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
-custom_proxy_group=🇸🇬 东南亚节点`select`(?=.*(马来西亚|新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
+custom_proxy_group=🇸🇬 东南亚节点`select`(?=.*(马来西亚|菲律宾|新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
 custom_proxy_group=🇺🇲 北美节点`select`(加拿大|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 custom_proxy_group=🌐 印度节点`url-test`(?=.*(印度))`http://www.gstatic.com/generate_204`320,,50
 custom_proxy_group=🌐 台湾节点`select`(?=.*(台湾|Taiwan))
 custom_proxy_group=🌐 南美节点`select`(?=.*(阿根廷|澳大利亚))
 custom_proxy_group=🌐 欧洲节点`select`(?=.*(法国|德国|英国|意大利|土耳其|俄罗斯|Russia|爱尔兰))
-custom_proxy_group=🌐 其他地区`select`(^(?!.*(美国|台湾|Taiwan|香港|HK|Hong Kong|🇭🇰|HongKong|印度|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|新加坡|坡|狮城|SG|Singapore)).*)
+custom_proxy_group=🌐 其他地区`select`(^(?!.*(阿根廷|澳大利亚|法国|德国|英国|意大利|土耳其|俄罗斯|Russia|爱尔兰|美国|台湾|Taiwan|香港|HK|Hong Kong|🇭🇰|HongKong|印度|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|新加坡|坡|狮城|SG|Singapore)).*)
 custom_proxy_group=⭐ 故转`fallback`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 台湾故转`*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 香港故转`url-test`(?=.*(香港|HK|HONGKONG))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_400`580,,50
-custom_proxy_group=🔯 日本故转`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`520,,50
-custom_proxy_group=🔯 加坡故转`url-test`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`560,,50
-custom_proxy_group=🔯 台湾故转`url-test`(?=.*(台湾|Taiwan))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`580,,50
+custom_proxy_group=🔯 香港自动`url-test`(?=.*(香港|HK|HONGKONG))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_400`580,,50
+custom_proxy_group=🔯 日本自动`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`520,,50
+custom_proxy_group=🔯 东南亚自动`url-test`(?=.*(马来西亚|菲律宾|新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`560,,50
+custom_proxy_group=🔯 台湾自动`url-test`(?=.*(台湾|Taiwan))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`580,,50
 
 
 
