--- a/cjl.ini
+++ b/cjl.ini
@@ -96,11 +96,11 @@ custom_proxy_group=🌐 台湾节点`select`(?=.*(台湾|Taiwan))
 custom_proxy_group=🌐 南美节点`select`(?=.*(阿根廷|澳大利亚))
 custom_proxy_group=🌐 欧洲节点`select`(?=.*(法国|德国|英国|意大利|土耳其|俄罗斯|Russia|爱尔兰))
 custom_proxy_group=🌐 其他地区`select`(^(?!.*(阿根廷|澳大利亚|法国|德国|英国|意大利|土耳其|俄罗斯|Russia|爱尔兰|美国|台湾|Taiwan|香港|HK|Hong Kong|🇭🇰|HongKong|印度|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|新加坡|坡|狮城|SG|Singapore)).*)
-custom_proxy_group=⭐ 故转`fallback`[]🔯 香港自动`[]🔯 日本自动`[]🔯 加坡自动`[]🔯 台湾自动`*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 香港自动`url-test`(?=.*(香港|HK|HONGKONG))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_300`580,,50
-custom_proxy_group=🔯 日本自动`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`520,,50
-custom_proxy_group=🔯 东南亚自动`url-test`(?=.*(马来西亚|菲律宾|新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_204`560,,50
-custom_proxy_group=🔯 台湾自动`url-test`(?=.*(台湾|Taiwan))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`https://www.gstatic.com/generate_450`500,,50
+custom_proxy_group=⭐ 故转`fallback`[]🔯 香港自动`[]🔯 日本自动`[]🔯 加坡自动`[]🔯 台湾自动`*$`https://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=🔯 香港自动`url-test`(?=.*(香港|HK|HONGKONG))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 日本自动`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`320,,50
+custom_proxy_group=🔯 东南亚自动`url-test`(?=.*(马来西亚|菲律宾|新加坡|坡|狮城|SG|Singapore))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`360,,50
+custom_proxy_group=🔯 台湾自动`url-test`(?=.*(台湾|Taiwan))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`380,,50
 
 
 
